examples/test/testpolicy7120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7120
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key2: value1
      key32: value48
      key8: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value5
          key30: value31
          key34: value4
      podSelector:
        matchLabels:
          key20: value25
